@@ -1,3 +1,7 @@
+nanoflann 1.1.8: Under development
+  * Created hidden constructors in nanoflann class, to disallow unintentional copies which will corrupt 
+    the internal pointers.
+
 nanoflann 1.1.7: Released Aug 24, 2013
   * Two internal containers are now automatically defined as fixed-size arrays if the 
     problem dimension is known at compile time, improving efficiency. 
